...
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="Home" />
    <item
        android:id="@+id/nav_inbox"
        android:icon="@drawable/ic_inbox_mail"
        android:title="Inbox" />
    <item
        android:id="@+id/nav_add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="Add" />
...
